<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scenes"
            android:icon="@drawable/ic_bed_24"
            android:title="@string/random"
            android:checked="true" />
        <item
            android:id="@+id/nav_positions"
            android:icon="@drawable/ic_loop_24"
            android:title="@string/positions" />
        <item
            android:id="@+id/nav_body_worship"
            android:icon="@drawable/ic_kneeling_24"
            android:title="@string/body_worship" />
        <item
            android:id="@+id/nav_task_list"
            android:icon="@drawable/ic_task_list_placeholder"
            android:title="Task List" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>