<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search_positions"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_add_to_plan_position"
        android:icon="@drawable/ic_calendar_today_24"
        android:title="@string/add_to_plan_night"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorite_position"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
</menu>
